# pathtracer

./: .gitignore  Cargo.toml  README.md
src/: bvh.rs  camera.rs  config.rs  export.rs  main.rs  materials.rs  objects.rs  scenes.rs  textures.rs  types.rs
src/configs/: config.yml
src/materials/: dielectric.rs  disney.rs  ggx.rs  lambertian.rs  light.rs  metal.rs
src/objects/: quad_mesh.rs  sphere.rs  tri_mesh.rs
src/scenes/: cornell.rs  lucy.rs  object.rs
src/textures/: image.rs
src/types/: color.rs  onb.rs  pdf.rs  ray.rs  sampler.rs  vector.rs
