[package]
name = "pathtracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clippy = "0.0.302"
env_logger = "0.11.4"
fmt = "0.1.0"
image = {version = "0.25.2", features = ["rayon"]}
indicatif = {version = "0.17.8", features = ["rayon"]}
log = "0.4.22"
nalgebra = "0.33.0"
rand = "0.8.5"
rayon = "1.10.0"
tobj = "4.0.2"
toml = "0.8.16"

[profile.release]
debug = true
